# cmake-cxx

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  FEATURES.md  README.md  conanfile.txt  dependencies.cmake  export.cmake  fetch_dependencies.sh  project.code-workspace  todo.md
.github/: developers.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cxx
dependencies/: CMakeLists.txt  cxxopts.cmake
dependencies/first/: CPack.cmake  cpm.cmake
dependencies/unordered/: GoogleTest.cmake  cxxopts.cmake  fmt.cmake
docker/: build.dockerfile  compose.yaml  compose.yml  ubuntu.dockerfile  ubuntu2004.dockerfile
lib/cmake/: AddGoogleExecutableConfig.cmake  AddLocalAllTargetConfig.cmake  BuildUtilitiesConfig.cmake  Dependencies.cmake  ExpectConfig.cmake  HelpGTestLibraryConfig.cmake  HelpParseArgumentsConfig.cmake  LogVarsConfig.cmake  MessageGateConfig.cmake  ProjectDllExportConfig.cmake  SetupBuildModeConfig.cmake  StringCapitalizeConfig.cmake  TargetUtilitiesConfig.cmake  dependencies.cmake  export.cmake
lib/cmake/config/: AddGoogleExecutableConfig.cmake  AlignStringsConfig.cmake  BuildUtilitiesConfig.cmake  ConfigureRPathVariablesConfig.cmake  ExpectConfig.cmake  FileToRawStringLiteralConfig.cmake  HelpParseArgumentsConfig.cmake  HighlightTargetOutputConfig.cmake  LogVarsConfig.cmake  MessageGateConfig.cmake  StringCapitalizeConfig.cmake  TargetUtilitiesConfig.cmake
lib/cmake/dependencies/: CMakeLists.txt  cpm.cmake  fmt.cmake
lib/cmake/dependencies/first/: CPack.cmake  cpm.cmake
lib/cmake/include/: all_dependencies.cmake  all_modules.cmake  cpm.cmake  dependencies.cmake  export.cmake  package.cmake
lib/cmake/include/dependencies/: CPack.cmake  Eigen.cmake  GLEW.cmake  (+5 more)
lib/cmake/module/: AddGoogleExecutable.cmake  AddLocalAllTarget.cmake  AlignStrings.cmake  AllModules.cmake  BalancedMatch.cmake  BuildUtilities.cmake  ConfigureRPathVariables.cmake  DefaultBuildType.cmake  DefaultStandard.cmake  DirectoryTargets.cmake  Expect.cmake  FileToRawStringLiteral.cmake  FindSubstrings.cmake  HelpParseArguments.cmake  HighlightTargetOutput.cmake  LineNumber.cmake  LogPolicy.cmake  LogVars.cmake  MessageGate.cmake  ProjectDllExport.cmake  RecordAliasDefinitions.cmake  RelatedTargets.cmake  SetPolicy.cmake  SetupBuildMode.cmake  SortListByLength.cmake  StringCapitalize.cmake  TargetUtilities.cmake
sample/: CMakeLists.txt  cli.cxx  cli.hxx  main.cxx  sources.cmake  targets.cmake
script/: fetch_dependencies.sh  run-docker-tests.bash  run-docker-tests.bat  run-tests.bash  run-tests.sh  run_docker_tests.bash  run_docker_tests.bat  run_docker_tests.sh  run_tests.sh
src/: CMakeLists.txt  application-impl.cxx  application-impl.hxx  application-state.hxx  application.cxx  application.hxx  entity.hxx  event-handler.cxx  event-handler.hxx  game.cxx  game.hxx  grid.hxx  grid_t.hxx  image-utilities.cxx  image-utilities.hxx  image.hxx  iscene-visitor.hxx  iscene.hxx  log.cxx  log.hxx  main.cxx  placeholder.hxx  placeholder_t.hxx  player.cxx  player.hxx  point_t.cxx  point_t.hxx  project.cxx  project.hxx  render-specs.cxx  render-specs.hxx  scene-input-injector.cxx  scene-input-injector.hxx  scene-input-visitor.cxx  scene-input-visitor.hxx  scene-visitor.hxx  scene.hxx  shear.cxx  shear.hxx  simulation.cxx  (+8 more)
src/application/: CMakeLists.txt  application-impl.cxx  application-impl.hxx  application.cxx  application.hxx
src/input/: CMakeLists.txt  event-handler.cxx  event-handler.hxx  reader.cxx  reader.hxx  scene-input-visitor.cxx  scene-input-visitor.hxx  state.cxx  state.hxx
src/render/: CMakeLists.txt  render-specs.cxx  render-specs.hxx  renderer.cxx  renderer.hxx  scene-render-visitor.cxx  scene-render-visitor.hxx  scene-renderer.cxx  scene-renderer.hxx  scene-visitor.cxx  scene-visitor.hxx  shader-factory.cxx  shader-factory.hxx  shader-program.cxx  shader-program.hxx  square.cxx  square.hxx  texture-cache.cxx  texture-cache.hxx  texture.cxx  texture.hxx  vao-square.cxx  vao-square.hxx  vao.cxx  vao.hxx
src/render/shader/: CMakeLists.txt  color.fs  factory.cxx  factory.hxx  program.cxx  program.hxx  xr-yg-zb.fs  xr-yg-zb.vs
src/render/shader/glsl/: CMakeLists.txt  xr-yg-zb.vs
src/render/vao/: CMakeLists.txt  attribute.cxx  attribute.hxx  square.cxx  square.hxx  triangle.cxx  triangle.hxx  vao.cxx  vao.hxx
src/scene/: CMakeLists.txt
src/simulation/: CMakeLists.txt  entity.cxx  entity.hxx  player.cxx  player.hxx  simulation.cxx  simulation.hxx
src/textures/: CMakeLists.txt  player.cxx  texture-cache.cxx  texture.hxx  textures.hxx
src/utility/: CMakeLists.txt  deduplicate.hxx  file-to-string.cxx  file-to-string.hxx  grid.hxx  grid_t.hxx  log.cxx  log.hxx  notify-assignment.hxx  placeholder-t.hxx  placeholder.hxx  point-t.hxx  point.hxx  point_t.hxx  priority-mutex-t.cxx  priority-mutex-t.hxx  priority-mutex.cxx  priority-mutex.hxx  shear.cxx  shear.hxx  this-file.hxx  thread-deque.hxx  thread-pool-t.hxx  thread-pool.hxx
test/: CMakeLists.txt
test/etc/: CMakeLists.txt  reference-to-moved-value.cxx
test/flags/: CMakeLists.txt  check-flags.cmake  lib.c  lib.cxx  main.cxx
test/integration/: CMakeLists.txt  texture.cxx
test/link/: CMakeLists.txt  benchmark.cxx  cxxopts.cxx  eigen.cxx  fmt.cxx  gtest.cxx  link-benchmark.cxx  link-eigen.cxx  link-gtest.cxx  link_benchmark.cxx  link_eigen.cxx  link_gtest.cxx  opencv.cxx  sdl.cxx
test/perf/: CMakeLists.txt  benchmark_shear.cxx  shear.cxx
test/performance/: CMakeLists.txt  shear.cxx  thread-pool-t.cxx  thread-pool.cxx
test/sample/: CMakeLists.txt  main.cxx  targets.cmake
test/unit/: CMakeLists.txt  application.cxx  assertions.hxx  deduplicate.cxx  entity.cxx  file-to-string.cxx  game.cxx  grid-t.cxx  grid.cxx  grid_t.cxx  input-state.cxx  log.cxx  notify-assignment.cxx  placeholder.cxx  player.cxx  point-t.cxx  point.cxx  point_t.cxx  priority-mutex-t.cxx  priority-mutex.cxx  project.cxx  sdl-main.cxx  shear.cxx  simulation.cxx  test-image-utilities.cxx  test-image.cxx  test-placeholder.cxx  test_shear.cxx  this-file.cxx  thread-deque.cxx  thread-pool-t.cxx  thread-pool.cxx  utilities.cxx
